--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -144,23 +144,21 @@ select[disabled] {
 /*******************************************/
 // Select
 .form-field.select {
+  position: relative;
+
   &:after {
     content: "";
     position: absolute;
-    bottom: 28px;
+    bottom: 10px;
     right: 10px;
 
-    width: 8px;
+    width: 12px;
     height: 12px;
 
     pointer-events: none;
 
-    background: url('/images/svgs/select-arrows.svg') no-repeat;
+    background: url('/images/icon-down.png') no-repeat;
     background-size: contain;
-
-    @media (min-width: $medium) {
-      bottom: 24px;
-    }
   }
 }
 
