Feature > added confirm popup before finalising trade Build > ran first build

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -25,6 +25,12 @@ a.button,
   outline: none;
   cursor: pointer;
 
+  &.border-grey {
+    color: $grey-3;
+
+    border-color: $grey-3;
+  }
+
   &.red {
     color: $color-1;
 
