--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,7 +17,7 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 @import './layout';
 @import './print';
 @import './forms';
-// @import './popups';
+@import './popups';
 
 img {
 	display: block;
