--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -20,6 +20,7 @@ $color-2: #BB7474; // brown-red
 $color-3: #500005; // dark-brown
 $color-4: #050505; // black
 $color-5: #FF3A44; // red
+$color-6: #76e375; // green
 
 $grey-1: #F0F2F5;
 $grey-2: #DCDFE6;
