--- a/src/scss/_popups.scss
+++ b/src/scss/_popups.scss
@@ -28,13 +28,16 @@
       z-index: 999;
   
       width: 90%;
-      max-width: 600px;
+      max-width: 450px;
       max-height: 90%;
       margin: auto;
       padding: 20px;
       transform: translate(-50%, -50%);
+
+      text-align: center;
   
       background: $color-1;
+      border-radius: 6px;
   
       overflow: auto;
   
@@ -62,6 +65,30 @@
           border-color: $color-5;
         }
       }
+    }
+  }
+
+  .popup-module.success {
+    .wrap {
+      background: $color-6;
+    }
+
+    h3 {
+      margin: 0;
+
+      font-family: $font-family-1;
+      font-size: 14px;
+      font-weight: $font-medium;
+      line-height: 24px;
+      letter-spacing: 2px;
+      text-align: center;
+      text-transform: uppercase;
+      color: $color-1;
+    }
+
+    p {
+      color: $color-1;
+      margin: 0;
     }
   }
   /********************************************/
